# qwacker

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-production.yml
bot/: __main__.py  constants.py
bot/extensions/: archive_channels.py  dl_setup.py  rules.py
