[project]
name = "qwacker"
version = "0.1.0"
description = ""
authors = [{ name = "mosguinz", email = "mos.guinz@gmail.com" }]
requires-python = "~=3.11"
dependencies = [
    "discord.py>=2.3.2,<3",
    "async-timeout>=4.0.3,<5",
    "python-dotenv>=1.0.1,<2",
    "emoji>=2.12.1,<3",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
]

[dependency-groups]
dev = [
    "black>=24.4.2,<25",
    "taskipy==1.14.1",
]

[tool.black]
line-length = 120

[tool.taskipy.tasks]
start = "python -m bot"
